syntax = "proto3";

package gss;

service Gss {
    rpc GetQueryBySpreadSheet (GetQueryBySpreadSheetRequest) returns (GetQueryBySpreadSheetResponce);
}

message GetQueryBySpreadSheetRequest {
}

message GetQueryBySpreadSheetResponce {
    string res = 1;
    string query = 2;
}